# h264-decoder-rs

./: .gitmodules  Cargo.toml  build.rs
bindgen/: wrapper.h
cmake/: CMakeLists.txt
examples/: decode.rs
src/: bindings.rs  ctypes.rs  lib.rs
